Change capital sigma to lowercase

--- a/yl2/sfm_yl2_aktsiahinnad_priit_latt.ipynb
+++ b/yl2/sfm_yl2_aktsiahinnad_priit_latt.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6b46b1f7acf57605ae96ee9b46388629a2cb28f594b02abc68377d57f6c0dd4a"
+  "signature": "sha256:3a77332cdf8865724af71f8696ea7baa6c07fc350c1d2eb84b7e3c3c0588729f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -242,7 +242,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Leiame muutuste p\u00f5hjal standardh\u00e4lbe $\\Sigma$ ning salvestame ta muutujasse `sigma` ning defineerime simulatsioonide arvu `n = 10`."
+      "Leiame muutuste p\u00f5hjal standardh\u00e4lbe $\\sigma$ ning salvestame ta muutujasse `sigma` ning defineerime simulatsioonide arvu `n = 10`."
      ]
     },
     {
