--- a/yl2/sfm_yl2_aktsiahinnad_priit_latt.ipynb
+++ b/yl2/sfm_yl2_aktsiahinnad_priit_latt.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3a77332cdf8865724af71f8696ea7baa6c07fc350c1d2eb84b7e3c3c0588729f"
+  "signature": "sha256:d81d27a48155e42d7f4434d5e309acf8bcb51ec926d2b7b9ff11dc8cba70e85c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,14 +14,8 @@
      "source": [
       "# MTMM.00.195 Sissejuhatus finantsmatemaatikasse #\n",
       "\n",
-      "## 2. kodut\u00f6\u00f6 - Priit L\u00e4tt ##"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "<br>\n",
+      "## 2. kodut\u00f6\u00f6 - Priit L\u00e4tt ##\n",
+      "\n",
       "Impordime edaspidises vajaminevad moodulid:\n",
       " * `datetime` - kuup\u00e4evade formaatimiseks,\n",
       " * `numpy` - vektorarvutuse jaoks,\n",
@@ -242,7 +236,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Leiame muutuste p\u00f5hjal standardh\u00e4lbe $\\sigma$ ning salvestame ta muutujasse `sigma` ning defineerime simulatsioonide arvu `n = 10`."
+      "Leiame muutuste p\u00f5hjal standardh\u00e4lbe $\\sigma$ ja salvestame ta muutujasse `sigma` ning defineerime simulatsioonide arvu `n = 10`."
      ]
     },
     {
