Add solution to third task

--- a/yl2/sfm_yl2_aktsiahinnad_priit_latt.ipynb
+++ b/yl2/sfm_yl2_aktsiahinnad_priit_latt.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d81d27a48155e42d7f4434d5e309acf8bcb51ec926d2b7b9ff11dc8cba70e85c"
+  "signature": "sha256:8835e208e07e590a8ef35ddfc5b97f71af0cabd0941670c6a914c300c88bf910"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -99,7 +99,7 @@
        "output_type": "pyout",
        "prompt_number": 3,
        "text": [
-        "<IPython.core.display.HTML at 0xb28144c>"
+        "<IPython.core.display.HTML at 0xa5b868c>"
        ]
       }
      ],
