Add .py solution

--- a/yl3/sfm_yl3_efektiivsusraja_priit_latt.ipynb
+++ b/yl3/sfm_yl3_efektiivsusraja_priit_latt.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:28e53dc39f770890cca14408d0662218837748f1f5d9c49b2bd3fb6ecfe26adb"
+  "signature": "sha256:4ade2f2e5305db018ced4a6b68741b410b014bb91966fc9584f38708e934b81c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,7 +16,7 @@
       "\n",
       "## 3. kodut\u00f6\u00f6 (efektiivsusraja) - Priit L\u00e4tt##\n",
       "\n",
-      "Lahendus toetub artiklile [Regression techniques for Portfolio Optimisation using MOSEK](http://arxiv.org/abs/1310.3397) ja selle artikli tarbeks loodud moodulist [mosekTools](https://github.com/tschm/MosekRegression)."
+      "Lahendus toetub artiklile [Regression techniques for Portfolio Optimisation using MOSEK](http://arxiv.org/abs/1310.3397) ja selle artikli tarbeks loodud moodulile [mosekTools](https://github.com/tschm/MosekRegression)."
      ]
     },
     {
